# wavo

./: README.md  meson.build
conf/: wavo.lua
include/wavo/: config.h  input.h  output.h  server.h  view.h
include/wavo/compositor/: view.h
src/: input.c  main.c  meson.build  server.c
src/compositor/: output.c  view.c  window.c
src/input/: keyboard.c  pointer.c
src/lua/: config.c
tests/: main.c  meson.build
tests/unit/lua/: test_config.c
